# VoxelGame

./: .clang-format  .gitignore  Application.cpp  Application.h  BiomeInfo.h  Block.cpp  Block.h  BlockData.h  BlockShader.cpp  BlockShader.h  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkWrapper.cpp  ChunkWrapper.h  Colors.cpp  Colors.h  CubeMesh.h  Definitions.cpp  Definitions.h  DirectionalLight.cpp  DirectionalLight.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  Font.cpp  Font.h  GBuffer.cpp  GBuffer.h  GUIRenderer.cpp  GUIRenderer.h  GUIShader.cpp  GUIShader.h  Light.cpp  (+60 more)
Debug/: Application.nativecodeanalysis.sarif  Colors.nativecodeanalysis.sarif  EventHandler.nativecodeanalysis.sarif  VoxelGame.ilk  Window.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  pch.nativecodeanalysis.sarif  vc142.idb
Debug/VoxelGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VoxelGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Resources/Fonts/: ASCII-Table.nfo  ASCIIde.nfo  ASCIIen.nfo
Resources/Misc/: .BlockData.json.swp  BiomeInfo.json  BlockData.json  Keybinds.json  Settings.json  Structures.json
Resources/Models/: grass.blend  grass.blend1  grass.mtl  player.blend  player.blend1
Resources/Shaders/: blockSelectionShader.frag  blockSelectionShader.vert  chunkShader.frag  chunkShader.vert  coloredQuadShader.frag  coloredQuadShader.vert  framebufferQuad.frag  framebufferQuad.vert  guiShader.frag  guiShader.vert  lightingShader.frag  lightingShader.vert  meshRenderShader.frag  meshRenderShader.vert  meshRenderShaderColor.frag  meshRenderShaderTexture.frag  mvpColorShader.frag  mvpColorShader.vert  skyboxShader.frag  skyboxShader.vert  textShader.frag  texturedQuadShader.frag  texturedQuadShader.vert  waterShader.frag  waterShader.vert
Resources/Textures/: crosshair.png~
docs/: keycodes.txt
include/: .Application.h.swo  .Application.h.swp  .Camera.h.swp  .Chunk.h.swp  .Definitions.h.swp  .Event.h.swo  .Event.h.swp  .EventDispatcher.h.swo  .EventDispatcher.h.swp  .Light.h.swp  .Logger.h.swp  .MasterRenderer.h.swo  .MasterRenderer.h.swp  .OctreeNode.h.swp  .Player.h.swo  .Player.h.swp  .Scene.h.swo  .ThreadPool.h.swp  .Vertex.h.swp  .Window.h.swp  .World.h.swo  Application.h  Application.hpp  BinarySearchTree.h  BiomeInfo.h  Block.h  BlockData.h  BlockShader.h  Callback.h  Camera.h  CaveGenerator.h  CaveInfo.h  CaveModule.h  Chunk.h  ChunkCreateSystem.h  ChunkRenderSystem.h  Collision.h  Collision.hpp  CollisionSystem.h  CollisionUtility.h  (+64 more)
include/Components/: AtlasComponent.h  BlockSelectionComponent.hpp  BlockStateComponent.hpp  CameraComponent.h  CameraComponent.hpp  ChunkComponent.h  ChunkComponent.hpp  CollisionComponent.h  CollisionComponent.hpp  GeometryComponent.h  InventoryComponent.hpp  ItemComponent.hpp  LightComponent.hpp  MeshRenderComponent.h  MeshRenderComponent.hpp  MultiMeshRenderComponent.hpp  PlayerComponent.h  PlayerComponent.hpp  PlayerTagComponent.h  RigidBodyComponent.h  RigidBodyComponent.hpp  SkyboxComponent.h  SkyboxComponent.hpp  TextureComponent.h  TransformationComponent.h  TransformationComponent.hpp  VelocityComponent.h  VelocityComponent.hpp  WorldComponent.h  WorldComponent.hpp
include/Events/: CallbackHandle.h  CallbackHandle.hpp  CallbackList.h  CallbackList.hpp  Event.h  Event.hpp  EventDispatcher.h  EventDispatcher.hpp
include/GameData/: BiomeIds.hpp  Block.h  Block.hpp  BlockGeometry.hpp  BlockIds.h  BlockIds.hpp  BlockTemplate.h  BlockTemplate.hpp  ChunkGeometryData.hpp  ChunkSection.hpp  GameData.h  GameData.hpp  OreData.h  SectionPart.hpp  Structure.hpp
include/Gui/: DebugLayout.h  DebugLayout.hpp  DragContext.hpp  GUI.h  GUI.hpp  HotbarLayout.hpp  Image.h  Image.hpp  IngameLayerGUI.h  IngameLayerGUI.hpp  InventoryLayout.hpp  ItemLayout.hpp  ItemWidget.hpp  Layout.h  Layout.hpp  MainMenu.h  MainMenuLayout.h  MainMenuLayout.hpp  Rectangle.h  Text.h  Text.hpp  UiConstraints.h  UiConstraints.hpp  UiMargin.h  UiMargin.hpp  UiProperties.h  UiProperties.hpp  Widget.h  Widget.hpp
include/Math/: Cuboid.h  Cuboid.hpp  Face.h  Plane.h  Plane.hpp  Ray.h  Ray.hpp
include/Rendering/: Colors.h  Font.h  GBuffer.h  GBuffer.hpp  Geometry.h  Item.hpp  Light.h  Light.hpp  Material.h  RenderQuad.h  RenderQuad.hpp  Shader.h  Text.h  Texture.h  Vertex.h  WaterRenderBuffers.hpp  WaterRenderbuffers.hpp  Window.h  Window.hpp
include/Resources/: Font.h  Font.hpp  Geometry.h  Geometry.hpp  Material.h  Material.hpp  Resource.h  Resource.hpp  ResourceIDs.h  ResourceIDs.hpp  ResourceManager.h  ResourceManager.hpp  Shader.h  Shader.hpp  Texture.h  Texture.hpp  TextureAtlas.hpp
include/Systems/: CameraSystem.hpp  ChunkCreateSystem.h  ChunkCreateSystem.hpp  ChunkSaveSystem.hpp  ChunkUpdateSystem.hpp  CloudSystem.h  CloudSystem.hpp  CollisionSystem.h  CollisionSystem.hpp  DayNightSystem.hpp  DebugRenderSystem.h  DebugRenderSystem.hpp  EntityRenderSystem.h  FluidSystem.hpp  InputSystem.h  InputSystem.hpp  ItemSystem.hpp  LightRenderSystem.h  MeshRenderSystem.h  MeshRenderSystem.hpp  PhysicsSystem.h  PhysicsSystem.hpp  PlayerMovementSystem.h  PlayerMovementSystem.hpp  SkyboxSystem.h  SkyboxSystem.hpp  System.h  System.hpp  SystemManager.h
include/Utility/: ChunkConverter.hpp  Utility.hpp
include/WorldGeneration/: Biome.h  (+29 more)
src/: .Application.cpp.swo  .Application.cpp.swp  .Camera.cpp.swo  .Camera.cpp.swp  .Chunk.cpp.swp  .Event.cpp.swp  .EventDispatcher.cpp.swp  .Logger.cpp.swp  .MapGenerator.cpp.swp  .MasterRenderer.cpp.swo  .MasterRenderer.cpp.swp  .OctreeNode.cpp.swp  .OreData.cpp.swp  .Player.cpp.swo  .Player.cpp.swp  .Source.cpp.swp  .Window.cpp.swp  .World.cpp.swp  Application.cpp  Block.cpp  BlockShader.cpp  CMakeLists.txt  Callback.cpp  Camera.cpp  CaveGenerator.cpp  CaveModule.cpp  Chunk.cpp  ChunkCreateSystem.cpp  ChunkRenderSystem.cpp  Collision.cpp  CollisionSystem.cpp  CollisionUtility.cpp  Color.cpp  Colors.cpp  Components.cpp  Configuration.cpp  Cuboid.cpp  Definitions.cpp  EntityRenderSystem.cpp  Event.cpp  (+45 more)
(+120 files in other folders)
